Routes Changelog
========================

-- 1.10 (**tip**)
* Static routes can now interpolate variable parts in the path if using {}
  variable part syntax.
* Added sub_domain condition option to accept False or None, to require that
  there be no sub-domain provided for the route to match.

-- 1.9.2 (July 8, 2008)
* Fixed bug in url_for which caused it to return a literal when it shouldn't
  have.

-- 1.9.1 (June 28, 2008)
* Fixed bug in formatted route recognition with formatting being absorbed
  into the id.

-- 1.9 (June 12, 2008)
* Fix undefined arg bug in url_for.
* Fixed bug with url_for not working properly outside of a request when
  sub-domains are active. Thanks Pavel Skvazh.
* Add non-minimization option to Routes and the Mapper for generation and
  recognition.
* Add Routes 2.0 style syntax for making routes and regexp. For example, this
  route will now work: '{controller}/{action}/{id}'.
* Fixed Routes to not use quote_plus when making URL's.
* WARNING: Mapper now comes with hardcode_names set to True by default. This
  means routes generated by name must work for the URL.
* Actually respect having urlcache disabled.
* WARNING: Calling url_for with a set of args that returns None now throws an
  exception. Code that previously checked to see if a url could be made must
  be updated accordingly.
* Updated url_for to return url in a literal for use in templating that may
  try to escape it again.
* Added option to use X_FORWARDED_PROTO for proxying behind https to work
  easier.
* Fixed map.resource to be less restrictive on id than just spaces.
* Fixed Mapper.create_regs not being thread safe, particularly when
  always_scan=True.

-- 1.8 (March 28, 2008)
* Fixed bug of map.resource not allowing spaces in id.
* Fixed url generation to properly handle unicode defaults in addition to
  unicode arguments.
* Fixed url_for to handle lists as keyword args when generating query
  parameters.